discussion/kv_engine/168615/168615_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Reduce cost of including request.h

With the recent optimisations to other headers,
mcbp/protocol/request.h has been promoted to be the most expensive
header included in kv_engine_everything:

    *** Expensive headers:
    30128 ms: kv_engine/include/mcbp/protocol/request.h (included 162 times, avg 185 ms)

- The biggest contributor to the include cost is
  <privilege_database.h> (which isn't even used directly from
  request.h!) Remove it.

- The second biggest contributor is the inclusion of header.h; this is
  mostly needed as request.h has a number of inline methods which
  require the definition of Header. De-inline these methods so
  header.h is no longer required.

After these changes, protocol/request.h no longer shows in the top
hottest headers; which means it must cost less than 3996ms (the last
header in the list), compared to 30128ms previously.

Change-Id: I7f0eeefee510ff37f7fbd21aea336aaac4b329b1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-13 09:19:57.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-13 09:59:40.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14793/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10: error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
#include "memcached_audit_events.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14793/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10:
error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14793/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42778/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0042/0159]: file stats post warmup...(422 ms) OK


99% tests passed, 1 tests failed out of 420

Total Test time (real) = 1156.11 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42778/ )

Timeout of a CTest test 420/420 Test #276: ep_testsuite.full_eviction.magma ..............................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42778/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13638/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36248/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4438/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4496/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15599/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16749/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16458/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17545/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24872/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-13 15:59:35.000000000
Message: 
Patch Set 3:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14811/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10: error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
#include "memcached_audit_events.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14811/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10:
error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14811/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13638/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42800/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36248/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4438/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4496/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15599/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16749/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16458/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17545/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24872/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-01-13 16:24:27.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-01-13 16:25:19.000000000
Message: 
Patch Set 3: Verified+1

Overriding BuildBot - the clang-tidy failure is due to me changing a source file (mcbp_fuzz_test.cc) which is only build if CB_LIBFUZZER is set; if that isn't then the correct include paths are not setup for the clang-tidy job.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-01-13 16:25:22.000000000
Message: 
Removed Code-Review-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-01-17 13:26:04.000000000
Message: 
Patch Set 3: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
